[package]
name = "string_sum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "string_sum"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0" }
pyo3-asyncio = { version = "0.19", features = ["attributes", "tokio-runtime"] }
snp500_data = {path = "../snp500-data-retrieval"}
polars-core = {version = "0.31.1", features = ["rows"]}
polars = {version = "0.31.1", features = ["object"]}
polars-plan = { version = "0.31.1", default_features = false, optional = true }
polars-lazy = { version = "0.31.1", default_features = false, optional = true }
arrow2 = "0.17.3"

anyhow = "1.0.72"
csv = "1.2.2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.26"
pyo3-polars = "0.5.0"

arrow-flight = "44.0.0"
libc = "0.2.147"
pyo3-macros = "0.19.1"
cargo-sort = "1.0.9"
serde_json = "1.0.103"
serde = "1.0.175"


